75: countdown timeouts review and removals (#90)
1. sleep removals
2. switch statements
3. tests improvements