@@ -34,7 +34,6 @@ import org.slf4j.LoggerFactory;
 
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
@@ -88,19 +87,19 @@ public class MtkGPSUnit extends RoboUnit<GPSRequest> {
     public static final String ATTRIBUTE_NAME_READ_INTERVAL = "readInterval";
 
     public static final Collection<AttributeDescriptor<?>> KNOWN_ATTRIBUTES = Collections
-            .unmodifiableCollection(Arrays.asList(DefaultAttributeDescriptor.create(Tuple3f.class, ATTRIBUTE_NAME_READ_INTERVAL)));
+            .unmodifiableCollection(List.of(DefaultAttributeDescriptor.create(Tuple3f.class, ATTRIBUTE_NAME_READ_INTERVAL)));
     private static final Logger LOGGER = LoggerFactory.getLogger(MtkGPSUnit.class);
 
+    private final List<GPSEventListener> listeners = new ArrayList<>();
     private MTK3339GPS mtk3339gps;
     private String serialPort;
     private int readInterval = DEFAULT_READ_INTERVAL;
-    private List<GPSEventListener> listeners = new ArrayList<>();
 
     // The future, if scheduled with the platform scheduler
     private volatile ScheduledFuture<?> scheduledFuture;
 
     private static class GPSEventListener implements GPSListener {
-        private RoboReference<GPSEvent> target;
+        private final RoboReference<GPSEvent> target;
 
         GPSEventListener(RoboReference<GPSEvent> target) {
             this.target = target;
@@ -151,22 +150,16 @@ public class MtkGPSUnit extends RoboUnit<GPSRequest> {
         super.onMessage(message);
         RoboReference<GPSEvent> targetReference = message.getTarget();
         switch (message.getOperation()) {
-            case REGISTER:
-                register(targetReference);
-                break;
-            case UNREGISTER:
-                unregister(targetReference);
-                break;
-            default:
-                LOGGER.warn("Unknown operation:{}", message.getOperation());
-                break;
+            case REGISTER -> register(targetReference);
+            case UNREGISTER -> unregister(targetReference);
+            default -> LOGGER.warn("Unknown operation:{}", message.getOperation());
         }
     }
 
     @SuppressWarnings("unchecked")
     @Override
     protected <R> R onGetAttribute(AttributeDescriptor<R> descriptor) {
-        if (descriptor.getAttributeType() == Integer.class && descriptor.getAttributeName().equals(ATTRIBUTE_NAME_READ_INTERVAL)) {
+        if (descriptor.attributeType() == Integer.class && descriptor.attributeName().equals(ATTRIBUTE_NAME_READ_INTERVAL)) {
             return (R) Integer.valueOf(readInterval);
         }
         return super.onGetAttribute(descriptor);
